<resources>
    <string name="app_name">Self Check Out</string>
    <string name="submit">Submit</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="toast_no_internet">Internet Is Not Available</string>
    <string name="toast_internet">Internet Available</string>
    <string name="recently_visited_shop">Recently Visited Shop</string>
    <string name="find_shop">Find Shop</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="store_name">Store Name</string>
    <string name="walk_in_customer">Walk in Customer</string>
    <string name="product">Product</string>
    <string name="qty">Qty</string>
    <string name="net_amt">Net\nAmt</string>
    <string name="_0">0</string>
    <string name="round_off">Round Off</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="upi">UPI</string>
    <string name="card">CARD</string>
    <string name="cash">CASH</string>
    <string name="no_data">No Data</string>
    <string name="cancle">Cancle</string>
    <string name="continues">Continue</string>
    <string name="my_orders">My Orders</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="discard_cart">Discard cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="sales_date">2021-12-12</string>
    <string name="sr">Sr.\nNo.</string>
    <string name="order_ndate">Order\nDate</string>
    <string name="invoice_nno">Invoice\nNo</string>
    <string name="total">Total</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create new account</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="mobile_nostar">Mobile No.*</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_of_use_and_privacy_policy">By clicking NEXT, you agree to <a href="http://www.vasyerp.com">Terms of Service</a>  and <a href="http://www.vasyerp.com">Privacy Policy</a> of VasyERP Solutions PVT LTD.</string>
    <string name="login_terms_of_use_and_privacy_policy">By clicking LOGIN, you agree to <a href="http://www.vasyerp.com">Terms of Use</a>  and <a href="http://www.vasyerp.com">Privacy Policy</a> of VasyERP Solutions PVT LTD.</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name *</string>
    <string name="addressstar">Address *</string>
    <string name="countryStar">Country *</string>
    <string name="stateStar">State *</string>
    <string name="cityStar">City *</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="back_to_login">Back to Login</string>
    <string name="store_logout">Store Logout</string>
</resources>