<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.order_list.PaidOrdersListFragment">

        <LinearLayout
            android:id="@+id/llOrderListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/dark_slate_blue"
            android:orientation="horizontal"
            android:paddingVertical="5dp"
            android:paddingBottom="5dp"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sr"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/invoice_nno"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/order_ndate"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvOrderListPaid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/llOrderListPaidBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llOrderListTitle"
            tools:listitem="@layout/item_order_list" />

        <LinearLayout
            android:id="@+id/llOrderListPaidBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvBtnOrderPaidPrev"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/madetommy_medium"
                android:shadowColor="@color/black"
                android:shadowDx="@integer/material_motion_duration_short_1"
                android:shadowDy="@integer/material_motion_duration_medium_1"
                android:shadowRadius="@integer/material_motion_duration_short_1"
                android:text="&lt;"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="5dp"
                app:rippleColor="@color/blue" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etOrderPaidCurrPg"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_bg2"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:selectAllOnFocus="true"
                    android:text="@string/_0"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrderPaidTotalPgs"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/mulish_bold"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvBtnOrderPaidNext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/madetommy_medium"
                android:shadowColor="@color/black"
                android:shadowDx="@integer/material_motion_duration_short_1"
                android:shadowDy="@integer/material_motion_duration_medium_1"
                android:shadowRadius="@integer/material_motion_duration_short_1"
                android:text="&gt;"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="5dp"
                app:rippleColor="@color/blue" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>