<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isInternetAvailable"
            type="boolean" />

        <variable
            name="internetMessage"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/noInternetConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@{ internetMessage }"
                android:textSize="14sp"
                android:textStyle="bold"
                android:translationZ="10dp"
                android:visibility="@{ isInternetAvailable ? View.GONE : View.VISIBLE }"
                tools:text="No Internet!!!" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_dark" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/madetommy_medium"
                android:letterSpacing=".15"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/mulish_regular"
                android:letterSpacing="0.01"
                android:text="@string/sign_in_to_continue"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/mobile_no"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeColor="@color/dark_slate_blue"
                app:endIconDrawable="@drawable/ic_outline_phone"
                app:endIconMode="custom"
                app:endIconTint="@color/dark_slate_blue">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/dark_slate_blue"
                android:fontFamily="@font/abeezee"
                android:paddingVertical="15dp"
                android:shadowColor="@color/black"
                android:shadowDx="@integer/material_motion_duration_short_1"
                android:shadowDy="@integer/material_motion_duration_medium_1"
                android:shadowRadius="@integer/material_motion_duration_short_1"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:cornerRadius="5dp"
                app:rippleColor="@color/blue"
                app:strokeColor="@color/green" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>